# onegai

./: Cargo.toml  README.org
data/replacements/: basic+weeb.json  basic.json  cote.json  mahouka.json  rezero-wct.json  rezero.json
src/: main.rs  ncode.rs  renderer.rs  replacements.rs  speak.rs  translator.rs
