[package]
name = "onegai"
version = "0.2.0"
description = "MTL related tools for download, preprocess and translate web novels from Japanese to English"
repository = "https://github.com/Atreyagaurav/onegai"
license = "GPLv3"
readme = "README.org"
keywords = ["translate", "machine-translation", "web-novels", "japanese"]
categories = ["command-line-utilities"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
maud = "0.23.0"
rust-bert = "0.19.0"
tch = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
reqwest = "0.11.11"
regex = "1.6.0"
select = "0.5"
colored = "2.0.0"
tts_rust = "0.3.3"

[profile.release]
lto = true
codegen-units = 1
strip = true